Non-unified build broken in debug mode https://bugs.webkit.org/show_bug.cgi?id=240378

Unreviewed non-unified build fixes.

* heap/StructureAlignedMemoryAllocator.cpp: Include <sys/mman.h> if needed.
Non-unified build broken in debug mode
https://bugs.webkit.org/show_bug.cgi?id=240378

Unreviewed non-unified build fixes.

* contentextensions/ContentExtensionCompiler.cpp: Add missing wtf/CrossThreadCopier.h header.
* workers/service/ServiceWorkerClients.cpp: Add missing Logging.h header.

Canonical link: https://commits.webkit.org/250544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294177 268f45cc-cd09-0410-ab3c-d52691b4dbfc